--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,10 +18,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:padding="16dp"
-            android:text="ITS"
+            android:padding="@dimen/title_padding"
+            android:text="@string/ITS"
             android:textColor="#616161"
-            android:textSize="16sp" />
+            android:textSize="@dimen/text_size" />
 
         <!--Logo image-->
         <ImageView
@@ -30,30 +29,27 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:src="@drawable/itsligo_logo"/>
-
+            android:src="@drawable/itsligo_logo" />
 
         <!--Website button-->
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:padding="8dp"
-            android:text="Our Website" />
+            android:layout_marginLeft="@dimen/button_margin"
+            android:layout_marginRight="@dimen/button_margin"
+            android:padding="@dimen/button_padding"
+            android:text="@string/button_text" />
 
         <!--Address view-->
         <TextView
-            android:id="@+id/team_b_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:padding="16dp"
-            android:text="Address"
+            android:padding="@dimen/title_padding"
+            android:text="@string/address"
             android:textColor="#000000"
             android:textSize="56sp" />
-
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
