--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:padding="@dimen/title_padding"
             android:text="@string/address"
             android:textColor="#000000"
-            android:textSize="56sp" />
+            android:textSize="@dimen/text_size" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
