--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,20 @@
             android:src="@drawable/itsligo_logo" />
 
         <!--Website button-->
+
         <Button
+            android:id="@+id/button_so"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/button_margin"
             android:layout_marginRight="@dimen/button_margin"
+            android:autoLink="web"
+            android:clickable="true"
+            android:cursorVisible="true"
+            android:linksClickable="true"
+            android:onClick="goTo"
             android:padding="@dimen/button_padding"
-            android:text="@string/button_text" />
+            android:text="@string/button_website" />
 
         <!--Address view-->
         <TextView
