--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
             android:layout_weight="1"
             android:src="@drawable/itsligo_logo" />
 
-        <!--Website button-->
 
+        <!--Website button-->
         <Button
             android:id="@+id/button_so"
             android:layout_width="match_parent"
@@ -46,6 +46,16 @@
             android:onClick="goTo"
             android:padding="@dimen/button_padding"
             android:text="@string/button_website" />
+
+        <!--details about school-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:padding="@dimen/title_padding"
+            android:text="@string/details"
+            android:textColor="#616161"
+            android:textSize="@dimen/text_size" />
 
         <!--Address view-->
         <TextView
