--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
+            android:layout_marginTop="@dimen/title_margin"
             android:padding="@dimen/title_padding"
             android:text="@string/ITS"
             android:textSize="@dimen/text_size" />
@@ -26,7 +28,8 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/title_margin"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:src="@drawable/itsligo_logo" />
 
@@ -37,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/button_margin"
+            android:layout_marginTop="@dimen/button_margin"
             android:layout_marginRight="@dimen/button_margin"
             android:autoLink="web"
             android:clickable="true"
@@ -65,4 +69,4 @@
             android:textSize="@dimen/text_size" />
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</ScrollView>
