--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="text_size">16sp</dimen>
     <dimen name="button_margin">24dp</dimen>
     <dimen name="button_padding">8dp</dimen>
+    <dimen name="title_margin">24dp</dimen>
 </resources>
