--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,9 +16,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/title_margin"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
-            android:layout_marginTop="@dimen/title_margin"
             android:padding="@dimen/title_padding"
             android:text="@string/ITS"
             android:textSize="@dimen/text_size" />
@@ -28,8 +27,8 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:layout_marginTop="@dimen/title_margin"
-            android:layout_height="150dp"
             android:layout_weight="1"
             android:src="@drawable/itsligo_logo" />
 
@@ -40,8 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/button_margin"
-            android:layout_marginTop="@dimen/button_margin"
             android:layout_marginRight="@dimen/button_margin"
+            android:layout_marginTop="@dimen/button_margin"
             android:autoLink="web"
             android:clickable="true"
             android:focusable="true"
@@ -67,6 +66,29 @@
             android:padding="@dimen/title_padding"
             android:text="@string/address"
             android:textSize="@dimen/text_size" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/email_icon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="15dp"
+                android:layout_alignLeft="@+id/email_address"
+                android:layout_weight="1"
+                android:src="@drawable/email_icon" />
+
+            <TextView
+                android:id="@+id/email_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text="@string/email"
+                android:textSize="@dimen/text_size"
+                android:textStyle="normal" />
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
